--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@
     border: none;
     border-radius: 24px;
     color: #0A3871;
-    margin-left: 700px;
+    margin-left: 500px;
     margin-top: 100px;
     padding-left: 20px;
     position: absolute;
@@ -67,7 +67,7 @@
     cursor: pointer;
     height: 67px;
     margin-left: 30px;
-    width: 300px;
+    width: 200px;
     }
     
     .btn__encriptar{
@@ -77,7 +77,7 @@
     color: white;
     cursor: pointer;
     height: 67px;
-    width: 300px;
+    width: 150px;
     }
     .btn__copiar{
     
@@ -88,10 +88,14 @@
     height: 67px;
     margin-left: 120px;
     margin-top: 625px;
-    position: fixed;
-    width: 300px;
+    position: absolute;
+    width: 150px;
     }
-
+.footer{
+    background-color: #0A3871;
+    text-align: center; 
+    font-family: 'inter';
+}
     .informacion {
     color: #495057;
     font-size: 18px;
